# EnergyCounter

./: CMakeLists.txt  README.md  configure
src/: CMakeLists.txt  amd_gpu.c  common.h  cpu.c  dram.c  ecounter.c  intel_gpu.c  interface.h  mock.c  nvidia_gpu.c
systemd/: ecounter.service
